--- a/mainpage.html
+++ b/mainpage.html
@@ -112,13 +112,13 @@
     <div class="profile">
       <img src="https://via.placeholder.com/120" alt="Sofia">
       <div class="profile-name">Sofia</div>
-      <a href="https://example.com/sofia" target="_blank">link</a>
+      <a href="sofia.html" target="_blank">link</a>
     </div>
 
     <div class="profile tyrone">
       <img src="https://via.placeholder.com/120" alt="Tyrone">
       <div class="profile-name">Tyrone</div>
-      <a href="https://example.com/tyrone" target="_blank">link</a>
+      <a href="TAiRCHIVE.html" target="_blank">link</a>
     </div>
   </div>
 
