FINAL NA TALAGA TO PRAMIS
09/16/2025 (5:20 am)

--- a/mainpage.html
+++ b/mainpage.html
@@ -7,20 +7,31 @@
 
 <style>
     body {
-      background: linear-gradient(to right, #2d82c7, #85fbff);
+      background: linear-gradient(to right, #2f6794, #5af7d5);
       text-align: center;
     }
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 20px;
+    
     }
-    header {
+    /* Rectangle image header */
+    .rect-img {
+      width: 500px;              
+      max-width: 100%;           
+      border: 3px solid rgb(165, 255, 245);   
+      display: block;
+      margin: 20px auto;  
+      }
+
+   .corner-img {
+      position: fixed;
+      bottom: 15px;  
+      left: 15px;     
+      width: 80px;    
       border: 2px solid black;
-      padding: 20px;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 20px;
+      border-radius: 10px; 
     }
     p.description {
       font-size: 1.1rem;
@@ -78,47 +89,50 @@
 
 
 <header>
-    OUR WEBSITES!!!!
-  </header>
+    <img src="f4 (2).jpg" alt="Group Photo" class="rect-img">
+  </header> 
 
+<!-- Corner logo/photo -->
+  <img src="jek.png" 
+       alt="Jak" class="corner-img">
 
-  <p class="description">whatever description here</p>
+  <p class="description"> ᯓ✦ Welcome to team Meteor Garden!! (or meteor shower????) ☄️. *. ⋆ </p>
 
   <p>
-    <a class="btn" href="https://youtu.be/IEr_TkmqyEk" target="_blank" rel="noopener noreferrer">
+    <a class="btn" target="_blank" rel="noopener noreferrer">
       check out our own websites!!
     </a>
   </p>
 
   <div class="profiles">
     <div class="profile">
-      <img src="https://via.placeholder.com/120" alt="Jewel">
+      <img src="joel.png" alt="Jewel">
       <div class="profile-name">Jewel</div>
-      <a href="jamolin.html" target="_blank">link</a>
+      <a href="jamolin.html" target="_blank">kyelleyourself</a>
     </div>
 
     <div class="profile">
-      <img src="https://via.placeholder.com/120" alt="Mattan">
+      <img src="mattan.png" alt="Mattan">
       <div class="profile-name">Mattan</div>
-      <a href="https://example.com/mattan" target="_blank">link</a>
+      <a href="Sagud.html" target="_blank">ragvntsuri</a>
     </div>
 
     <div class="profile">
-      <img src="https://via.placeholder.com/120" alt="Lian">
+      <img src="jul.png" alt="Lianne">
       <div class="profile-name">Julianne</div>
-      <a href="https://example.com/lian" target="_blank">link</a>
+      <a href="SERANDONJULIANNE.html" target="_blank.">M0ss1nfestedMatch4</a>
     </div>
 
     <div class="profile">
-      <img src="https://via.placeholder.com/120" alt="Sofia">
+      <img src="pia.png" alt="Sofia">
       <div class="profile-name">Sofia</div>
-      <a href="sofia.html" target="_blank">link</a>
+      <a href="sofia.html" target="_blank">piattos8</a>
     </div>
 
     <div class="profile tyrone">
-      <img src="https://via.placeholder.com/120" alt="Tyrone">
+      <img src="tyrone.png" alt="Tyrone">
       <div class="profile-name">Tyrone</div>
-      <a href="TAiRCHIVE.html" target="_blank">link</a>
+      <a href="TAiRCHIVE.html" target="_blank">taironn06</a>
     </div>
   </div>
 
