--- a/TAiRCHIVE.html
+++ b/TAiRCHIVE.html
@@ -2,26 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+ 
     <title>TAiRCHIVE</title>
-
+ 
     <link rel="stylesheet" href="style.css">
-
+ 
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-
+ 
   </head>
-
+ 
+  <style>
+h1{
+    font-family: "Archivo Black";
+    color: white;
+}
+ 
+h2{
+    font-family: "Archivo Black";
+    color: white;
+}
+ 
+p{
+    font-family: "Archivo Black";
+    color: white;
+}
+ 
+ 
+body{
+    background: linear-gradient(#3f93e2, #fcfcfc 13%);
+    background-size: 1000% 1000%;
+}
+  </style>
  <body align=center>
-
+ 
     <img src="pic-removebg-preview.png" alt="" width="300px" height="400px">
-
+ 
     <h1 align=center><big><big>TAiRCHIVE!</big></big></h1>
-
+ 
     <h2>THIS IS TAiRCHIVE WHERE YOU CAN WATCH MY VIDEO AND LISTEN TO MY FAVORITE SONG</h2>
     <h2>HERE'S MY FAVORITE SONG</h3>
-    
+   
     <h2>↓↓↓↓</h3>
       <p>It's Not Living (If It's Not With You) - The 1975</p>
     <audio controls>
@@ -29,8 +51,8 @@
     </audio>
     <h2>AND HERE'S MY VLOG</h2>
     <h2>↓↓↓↓</h2>
-
-    <video controls src="vlog.mp4" width="500">
-
+ 
+    <video controls src="vlog.tyrone.mp4" width="500">
+ 
  </body>
 </html>
