--- a/sofia.html
+++ b/sofia.html
@@ -36,7 +36,7 @@
 </h6>
 
  <video width="400" height="240" controls> 
- <source src="c:\Users\Sofia\Downloads\MY VLOG.mp4" type="video/mp4"> 
+ <source src="sofia vlog.mp4" type="video/mp4"> 
 </video> 
 
 <CENTER>🌐My Website-Thanks for Watching!</CENTER>
